Update index.html to biomedical implant design

--- a/index.html
+++ b/index.html
@@ -3,27 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search4Eleven - Home</title>
+    <title>Search4Eleven - Biomedical Implant Design</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 20px; background-color: #f4f4f4; }
-        header { text-align: center; padding: 50px; background-color: #007bff; color: white; }
-        section { max-width: 800px; margin: 20px auto; padding: 20px; background: white; border-radius: 8px; }
-        a { color: #007bff; text-decoration: none; }
+        body { 
+            font-family: Arial, sans-serif; 
+            margin: 0; 
+            padding: 20px; 
+            background-color: #f8f9fa; /* Light gray for clean, medical feel */
+            color: #333;
+        }
+        header { 
+            text-align: center; 
+            padding: 50px 20px; 
+            background: linear-gradient(135deg, #007bff, #0056b3); /* Blue gradient for trust and tech */
+            color: white; 
+            box-shadow: 0 4px 8px rgba(0,123,255,0.2);
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+        section { 
+            max-width: 800px; 
+            margin: 20px auto; 
+            padding: 20px; 
+            background: white; 
+            border-radius: 8px; 
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        h2 {
+            color: #007bff; /* Blue for headings to evoke reliability */
+        }
+        a { 
+            color: #28a745; /* Green for links, symbolizing health and innovation */
+            text-decoration: none; 
+            font-weight: bold;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin: 10px 0;
+        }
+        .focus-highlight {
+            border-left: 4px solid #28a745;
+            padding-left: 15px;
+        }
     </style>
 </head>
 <body>
     <header>
-        <h1>Welcome to Search4Eleven</h1>
-        <p>Your hub for daily project updates and more!</p>
+        <h1>Search4Eleven: Biomedical Implant Design</h1>
+        <p>Specializing in PCB and Firmware for Innovative Medical Implants</p>
     </header>
+    <section class="focus-highlight">
+        <h2>About My Work</h2>
+        <p>With expertise in hardware-software co-design, I focus on developing reliable PCBs and firmware for biomedical implants. My projects emphasize biocompatibility, miniaturization, signal integrity, and compliance with standards like ISO 13485, ensuring safe and efficient medical devices.<grok-card data-id="cb5eb3" data-type="citation_card"></grok-card><grok-card data-id="7d2761" data-type="citation_card"></grok-card></p>
+    </section>
     <section>
-        <h2>About Me</h2>
-        <p>Hi, I'm [Your Name]. This is my personal site where I document my projects daily. Check out my blog for the latest updates.</p>
+        <h2>Key Focus Areas</h2>
+        <ul>
+            <li>PCB Design: Flexible and rigid-flex boards for implants, prioritizing thermal stability and EMI shielding.<grok-card data-id="64b633" data-type="citation_card"></grok-card><grok-card data-id="f00d30" data-type="citation_card"></grok-card></li>
+            <li>Firmware Development: Embedded systems for data processing, power management, and real-time control in medical hardware.<grok-card data-id="d717d9" data-type="citation_card"></grok-card></li>
+            <li>Daily Projects: Documenting advancements in silicon validation, RF integration, and scripting for biomedical applications.</li>
+        </ul>
     </section>
     <section>
         <h2>Quick Links</h2>
         <ul>
-            <li><a href="/blog">Go to Blog</a></li>
+            <li><a href="/blog">Explore Blog for Daily Updates</a></li>
             <li><a href="https://github.com/search4eleven">My GitHub Profile</a></li>
         </ul>
     </section>
